--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -12,8 +12,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>720</width>
-    <height>550</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -33,11 +33,11 @@
      <string>串口选择</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_4">
+   <widget class="QComboBox" name="cbStopbit">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>87</y>
+      <y>84</y>
       <width>89</width>
       <height>20</height>
      </rect>
@@ -53,7 +53,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>151</y>
+      <y>165</y>
       <width>48</width>
       <height>25</height>
      </rect>
@@ -66,7 +66,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>116</y>
+      <y>112</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -75,11 +75,11 @@
      <string>校验位</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_8">
+   <widget class="QPushButton" name="btnOpen">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>151</y>
+      <y>165</y>
       <width>90</width>
       <height>30</height>
      </rect>
@@ -92,7 +92,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>90</y>
+      <y>87</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -105,7 +105,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>64</y>
+      <y>63</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -114,12 +114,12 @@
      <string>数据位</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_2">
+   <widget class="QComboBox" name="cbBaudrate">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>35</y>
-      <width>89</width>
+      <y>34</y>
+      <width>90</width>
       <height>20</height>
      </rect>
     </property>
@@ -135,12 +135,15 @@
     <property name="currentText">
      <string/>
     </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QComboBox::AdjustToContentsOnFirstShow</enum>
+    </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_5">
+   <widget class="QComboBox" name="cbParity">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>113</y>
+      <y>109</y>
       <width>89</width>
       <height>20</height>
      </rect>
@@ -152,11 +155,11 @@
      </sizepolicy>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox_3">
+   <widget class="QComboBox" name="cbDatabit">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>61</y>
+      <y>60</y>
       <width>89</width>
       <height>20</height>
      </rect>
@@ -172,7 +175,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>36</y>
+      <y>35</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -181,7 +184,7 @@
      <string>波特率</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QComboBox" name="cbPortName">
     <property name="geometry">
      <rect>
       <x>70</x>
@@ -210,11 +213,11 @@
      <string>周期(ms)</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_2">
+   <widget class="QCheckBox" name="ckTime">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>250</y>
+      <y>269</y>
       <width>151</width>
       <height>16</height>
      </rect>
@@ -223,7 +226,7 @@
      <string>时间戳(以回车换行断帧)</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="txtTimeout">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -246,11 +249,11 @@
      <string>定时</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox">
+   <widget class="QCheckBox" name="ckHex">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>230</y>
+      <y>249</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -259,7 +262,7 @@
      <string>十六进制显示</string>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit">
+   <widget class="QPlainTextEdit" name="txtRecv">
     <property name="geometry">
      <rect>
       <x>170</x>
@@ -269,11 +272,11 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_12">
+   <widget class="QPushButton" name="btnSaveRecv">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>191</y>
+      <y>210</y>
       <width>71</width>
       <height>30</height>
      </rect>
@@ -282,11 +285,11 @@
      <string>保存窗口</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_13">
+   <widget class="QPushButton" name="btnClearRecv">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>191</y>
+      <y>210</y>
       <width>71</width>
       <height>30</height>
      </rect>
@@ -295,7 +298,7 @@
      <string>清空接收</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_9">
+   <widget class="QPushButton" name="btnSend">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -308,7 +311,7 @@
      <string>发送</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_10">
+   <widget class="QPushButton" name="btnClearSend">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -321,7 +324,7 @@
      <string>清空发送</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_11">
+   <widget class="QPushButton" name="btnStopSend">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -334,7 +337,7 @@
      <string>停止发送</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_3">
+   <widget class="QCheckBox" name="chSendHex">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -360,7 +363,7 @@
      <string>发送新行</string>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit_3">
+   <widget class="QPlainTextEdit" name="txtSend">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -381,6 +384,35 @@
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>137</y>
+      <width>48</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>流控</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="cbFlow">
+    <property name="geometry">
+     <rect>
+      <x>69</x>
+      <y>134</y>
+      <width>89</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
    </widget>
   </widget>
