--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>725</width>
-    <height>550</height>
+    <height>489</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>QSerialPort</string>
+   <string/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
@@ -49,13 +49,13 @@
      </sizepolicy>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
+   <widget class="QLabel" name="lbPortStatus">
     <property name="geometry">
      <rect>
-      <x>11</x>
+      <x>10</x>
       <y>165</y>
       <width>48</width>
-      <height>25</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -204,7 +204,7 @@
     <property name="geometry">
      <rect>
       <x>9</x>
-      <y>482</y>
+      <y>430</y>
       <width>48</width>
       <height>15</height>
      </rect>
@@ -213,11 +213,11 @@
      <string>周期(ms)</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="ckTime">
+   <widget class="QCheckBox" name="ckTimestamp">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>269</y>
+      <y>250</y>
       <width>151</width>
       <height>16</height>
      </rect>
@@ -226,34 +226,34 @@
      <string>时间戳(以回车换行断帧)</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="txtTimeout">
+   <widget class="QLineEdit" name="txtInterval">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>480</y>
-      <width>51</width>
+      <x>63</x>
+      <y>428</y>
+      <width>41</width>
       <height>19</height>
      </rect>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_5">
+   <widget class="QCheckBox" name="ckSendTimer">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>460</y>
-      <width>47</width>
+      <y>408</y>
+      <width>81</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>定时</string>
+     <string>定时发送</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="ckHex">
+   <widget class="QCheckBox" name="ckRecvHex">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>249</y>
+      <y>230</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -268,7 +268,7 @@
       <x>170</x>
       <y>10</y>
       <width>541</width>
-      <height>251</height>
+      <height>253</height>
      </rect>
     </property>
    </widget>
@@ -276,7 +276,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>210</y>
+      <y>200</y>
       <width>71</width>
       <height>30</height>
      </rect>
@@ -289,7 +289,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>210</y>
+      <y>200</y>
       <width>71</width>
       <height>30</height>
      </rect>
@@ -302,8 +302,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>310</y>
-      <width>90</width>
+      <y>290</y>
+      <width>96</width>
       <height>30</height>
      </rect>
     </property>
@@ -315,8 +315,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>350</y>
-      <width>90</width>
+      <y>330</y>
+      <width>96</width>
       <height>30</height>
      </rect>
     </property>
@@ -324,24 +324,11 @@
      <string>清空发送</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnStopSend">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>390</y>
-      <width>90</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>停止发送</string>
-    </property>
-   </widget>
    <widget class="QCheckBox" name="chSendHex">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>420</y>
+      <y>368</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -350,11 +337,11 @@
      <string>十六进制发送</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_4">
+   <widget class="QCheckBox" name="chSendNewline">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>440</y>
+      <y>388</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -366,10 +353,10 @@
    <widget class="QPlainTextEdit" name="txtSend">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>310</y>
-      <width>581</width>
-      <height>191</height>
+      <x>120</x>
+      <y>290</y>
+      <width>591</width>
+      <height>157</height>
      </rect>
     </property>
    </widget>
@@ -377,7 +364,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>280</y>
+      <y>270</y>
       <width>701</width>
       <height>16</height>
      </rect>
