--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>725</width>
-    <height>489</height>
+    <height>468</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -204,7 +204,7 @@
     <property name="geometry">
      <rect>
       <x>9</x>
-      <y>430</y>
+      <y>400</y>
       <width>48</width>
       <height>15</height>
      </rect>
@@ -216,21 +216,21 @@
    <widget class="QCheckBox" name="ckTimestamp">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>250</y>
-      <width>151</width>
+      <x>107</x>
+      <y>235</y>
+      <width>61</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>时间戳(以回车换行断帧)</string>
+     <string>时间戳</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="txtInterval">
     <property name="geometry">
      <rect>
       <x>63</x>
-      <y>428</y>
+      <y>398</y>
       <width>41</width>
       <height>19</height>
      </rect>
@@ -240,7 +240,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>408</y>
+      <y>378</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -253,23 +253,13 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>230</y>
-      <width>101</width>
+      <y>235</y>
+      <width>91</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>十六进制显示</string>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="txtRecv">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>10</y>
-      <width>541</width>
-      <height>253</height>
-     </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="btnSaveRecv">
@@ -302,7 +292,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>290</y>
+      <y>272</y>
       <width>96</width>
       <height>30</height>
      </rect>
@@ -315,7 +305,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>330</y>
+      <y>309</y>
       <width>96</width>
       <height>30</height>
      </rect>
@@ -328,7 +318,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>368</y>
+      <y>338</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -341,7 +331,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>388</y>
+      <y>358</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -354,9 +344,9 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>290</y>
+      <y>272</y>
       <width>591</width>
-      <height>157</height>
+      <height>143</height>
      </rect>
     </property>
    </widget>
@@ -364,7 +354,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>270</y>
+      <y>254</y>
       <width>701</width>
       <height>16</height>
      </rect>
@@ -400,6 +390,16 @@
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="txtRecv">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>10</y>
+      <width>541</width>
+      <height>241</height>
+     </rect>
     </property>
    </widget>
   </widget>
