--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,10 +24,13 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>12</y>
+      <y>7</y>
       <width>48</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="toolTip">
+     <string>重选串口需要重新打开</string>
     </property>
     <property name="text">
      <string>串口选择</string>
@@ -37,7 +40,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>84</y>
+      <y>80</y>
       <width>89</width>
       <height>20</height>
      </rect>
@@ -49,24 +52,11 @@
      </sizepolicy>
     </property>
    </widget>
-   <widget class="QLabel" name="lbPortStatus">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>165</y>
-      <width>48</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>串口操作</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>112</y>
+      <y>107</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -78,9 +68,9 @@
    <widget class="QPushButton" name="btnOpen">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>165</y>
-      <width>90</width>
+      <x>9</x>
+      <y>161</y>
+      <width>151</width>
       <height>30</height>
      </rect>
     </property>
@@ -92,7 +82,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>87</y>
+      <y>81</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -105,7 +95,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>63</y>
+      <y>55</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -118,7 +108,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>34</y>
+      <y>30</y>
       <width>90</width>
       <height>20</height>
      </rect>
@@ -143,7 +133,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>109</y>
+      <y>105</y>
       <width>89</width>
       <height>20</height>
      </rect>
@@ -159,7 +149,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>60</y>
+      <y>54</y>
       <width>89</width>
       <height>20</height>
      </rect>
@@ -175,7 +165,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>35</y>
+      <y>31</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -188,7 +178,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>10</y>
+      <y>5</y>
       <width>89</width>
       <height>20</height>
      </rect>
@@ -204,10 +194,13 @@
     <property name="geometry">
      <rect>
       <x>9</x>
-      <y>400</y>
+      <y>403</y>
       <width>48</width>
       <height>15</height>
      </rect>
+    </property>
+    <property name="toolTip">
+     <string>更改周期后需要重新发送</string>
     </property>
     <property name="text">
      <string>周期(ms)</string>
@@ -217,7 +210,7 @@
     <property name="geometry">
      <rect>
       <x>107</x>
-      <y>235</y>
+      <y>236</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -230,7 +223,7 @@
     <property name="geometry">
      <rect>
       <x>63</x>
-      <y>398</y>
+      <y>401</y>
       <width>41</width>
       <height>19</height>
      </rect>
@@ -240,10 +233,13 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>378</y>
+      <y>383</y>
       <width>81</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="toolTip">
+     <string/>
     </property>
     <property name="text">
      <string>定时发送</string>
@@ -253,7 +249,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>235</y>
+      <y>236</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -266,7 +262,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>200</y>
+      <y>203</y>
       <width>71</width>
       <height>30</height>
      </rect>
@@ -279,7 +275,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>200</y>
+      <y>203</y>
       <width>71</width>
       <height>30</height>
      </rect>
@@ -292,7 +288,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>272</y>
+      <y>271</y>
       <width>96</width>
       <height>30</height>
      </rect>
@@ -305,7 +301,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>309</y>
+      <y>312</y>
       <width>96</width>
       <height>30</height>
      </rect>
@@ -318,7 +314,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>338</y>
+      <y>343</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -331,7 +327,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>358</y>
+      <y>363</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -344,9 +340,9 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>272</y>
-      <width>591</width>
-      <height>143</height>
+      <y>269</y>
+      <width>596</width>
+      <height>151</height>
      </rect>
     </property>
    </widget>
@@ -354,7 +350,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>254</y>
+      <y>253</y>
       <width>701</width>
       <height>16</height>
      </rect>
@@ -367,7 +363,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>137</y>
+      <y>133</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -380,7 +376,7 @@
     <property name="geometry">
      <rect>
       <x>69</x>
-      <y>134</y>
+      <y>130</y>
       <width>89</width>
       <height>20</height>
      </rect>
@@ -396,9 +392,9 @@
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>10</y>
-      <width>541</width>
-      <height>241</height>
+      <y>5</y>
+      <width>546</width>
+      <height>245</height>
      </rect>
     </property>
    </widget>
