--- a/images.qrc
+++ b/images.qrc
@@ -4,6 +4,7 @@
         <file>images/notopened.ico</file>
         <file>images/opened.ico</file>
         <file>images/unpinned.bmp</file>
+        <file>images/pinned.bmp</file>
         <file>images/exit.png</file>
     </qresource>
     <qresource prefix="/subprefix">
